# ai-classifieds-parser

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/admin_api/: auth.py  help_registry.py  main.py  schemas.py  services.py
app/admin_api/routes/: help.py  runtime.py  settings.py
app/core/: config.py  contracts.py  crypto.py  deployment.py  events.py  normalize.py  runtime_config.py
app/services/audit/: repo.py
app/services/backup/: monitor_logic.py  monitor_repo.py
app/services/decision/: engine.py  lists_facade.py  models.py
app/services/leads/: queue_repo.py
app/services/lists/: blacklist_store.py  import_csv.py  providers.py  whitelist_store.py
app/services/notify/: telegram.py
app/services/retention/: cleaners.py  manager.py  policy.py
app/services/settings/: defaults.py  repo.py
app/services/storage/: ch_events.py  pg_repo.py
app/tools/: backup_monitor.py  backup_report.py  leads_janitor.py  retention_run.py  settings_init.py
config/: retention.json  runtime.json
docs/: ARCHITECTURE.md  CANONICAL_FIELDS.md  INTERFACES.md  RULES.md  _CHECKPOINT_STATUS.txt  _FILES_CURRENT.txt
docs/checkpoints/: CATALOG_STATUS.md  CHECKPOINT_2026-01-09_0529.md  CHECKPOINT_2026-01-09_0551.md  CHECKPOINT_2026-01-09_0606.md  CHECKPOINT_2026-01-09_0610.md  INVENTORY.md
docs/interfaces/: IFACE-LISTS-MATCH-001.md
infra/: docker-compose.yml
tests/: test_admin_api_help_settings.py  test_backup_monitor_logic.py  test_decision_engine.py  test_leads_queue.py  test_lists.py  test_retention.py  test_runtime.py  test_smoke.py
tools/: stub_consume.py
(+6 files in other folders)
