[project]
name = "ai-classifieds-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.10.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
